# mcp-database

./: Cargo.toml  README.md
src/: client.rs  main.rs  server.rs
test/: README.md  run_tests.sh  test_lifecycle.py  test_server.py  test_sqlite_backend.py
