[package]
name = "mcp-database"
version = "1.0.0"
edition = "2024"
authors = ["James Karanja <james.karanja@zavora.ai>"]
description = "Database MCP Server — query, schema inspection, migrations, explain plans, indexes, and data exploration for AI agents"
license = "Apache-2.0"
repository = "https://github.com/zavora-ai/mcp-database"
homepage = "https://enterprise.adk-rust.com"
keywords = ["mcp", "database", "sql", "postgresql", "schema"]
categories = ["development-tools"]
readme = "README.md"

[dependencies]
adk-mcp-sdk = "0.1"
rmcp = { version = "1.7", features = ["server", "transport-io", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
schemars = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
urlencoding = "2"

[workspace]
